--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv-safe": "^8.2.0",
+    "dotenv-save": "^1.2.0",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
